chore(io): Add many commentaries and exclude printStackTrace usage in favor of loggers